--- a/app/WhatsAppTemplate/WhatsAppTemplate.css
+++ b/app/WhatsAppTemplate/WhatsAppTemplate.css
@@ -10,17 +10,8 @@
 }
 .template{
     padding: 1rem;
-}
-.buttondiv{
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    vertical-align: middle;
-    margin-top: 5%;
-    /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); */
-}
+ }
+/* 
 
 .templatebutton{
     margin: 10px;
@@ -44,14 +35,55 @@
     font-weight: bold;
     margin-top: 10px;
 }
+
+  */
+.templatename{
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 10px;
+}
 .messagetext{
     color: white;
-    font-size: 15px;
+    font-size: 17px;
     margin-top: 10px;
+}
+.body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5%;
+    width: 100%;
+    color: white;
+    font-size: 16px;
 }
 .footertext{
     color: rgb(153 148 148);
-    font-size: 20px;
+    font-size: 15px;
     margin-top: 10px;
-    font-weight: 200;
+    font-weight: 500;
+} 
+.buttondiv{
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    vertical-align: middle;
+    margin-top: 5%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); 
+    transition: 0.3s;
+}
+.templatebutton{
+    margin: 10px;
+    padding: 10px;
+    height: 2rem;
+    width: 100%;
+    color: rgb(59, 121, 228);
+    font-size: 17px;
+    background-color: #202d32;
+    font-weight: bold;
+    cursor: pointer;
+    border-top: 1px solid rgb(235, 237, 240);
 }
