--- a/app/WhatsAppTemplate/WhatsAppTemplate.css
+++ b/app/WhatsAppTemplate/WhatsAppTemplate.css
@@ -1,12 +1,13 @@
 .parentdiv{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     vertical-align: middle;
     margin-top: 5%;
     border-radius: 8px;
     background-color: #202d32;
-    width: 32%;
+    width: 50%;
 }
 .template{
     padding: 1rem;
@@ -81,6 +82,18 @@
     height: 2rem;
     width: 100%;
     color: rgb(59, 121, 228);
+    font-size: 17px;
+    background-color: #202d32;
+    font-weight: bold;
+    cursor: pointer;
+    border-top: 1px solid rgb(235, 237, 240);
+}
+.copybutton{
+    margin: 10px;
+    padding: 10px;
+    height: 2rem;
+    width: 100%;
+    color: white;
     font-size: 17px;
     background-color: #202d32;
     font-weight: bold;
