ui updated of form

--- a/app/users/newpage.css
+++ b/app/users/newpage.css
@@ -1,6 +1,6 @@
 .mainform{
-    width: 37%;
-    margin-top: 5%;
+    width: 60%;
+    margin-top: 1%;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -9,13 +9,21 @@
 }
 .formdiv{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    margin-top: none;
+    justify-content: baseline;
+}
+.formheader{
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-top: 30px;
+
 }
 .label{
     margin-bottom: 10px;
     font-size: 1rem;
+    width: 55vw;
     font-weight: 300;
 }
 .templatediv{
@@ -37,7 +45,7 @@
     margin-top: 20px;
     padding: 10px 20px;
     border: none;
-    width: 30%;
+    width: 100%;
     border-radius: 5px;
     background-color: #007bff;
     color: white;
@@ -76,4 +84,32 @@
 }
 .copybutton:hover{
     background-color: #071f38;
+}
+.tonesbuttondiv{
+    width:55vw ;
+    padding: 0.5rem;
+    border-radius: 5px;
+    background-color: #dadfe9;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.tonesbutton{
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color:transparent;
+    color: #1E252F;
+    width: 20%;
+    font-size: 1rem;
+    font-weight: 400;
+    cursor: pointer;
+}
+.tonesbutton:hover{
+    background-color: #007bff;
+    color: white;
+}
+.tonesbutton:active{
+    background-color: #007bff;
+    color: white;
 }
